Add Methods to subscribe and send messages over Grpc Channel

--- a/LocalPrinting-TFHKA/LocalPrinting-TFHKA.csproj
+++ b/LocalPrinting-TFHKA/LocalPrinting-TFHKA.csproj
@@ -1,18 +1,15 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
     <OutputType>Exe</OutputType>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
-  
   <ItemGroup>
-    <PackageReference Include="Grpc" Version="2.23.0" />
-    <PackageReference Include="Google.Protobuf" Version="3.8.0" />
-    <PackageReference Include="Grpc.Tools" Version="2.23.0" />
-  </ItemGroup>       
-
+    <PackageReference Include="Google.Protobuf" Version="3.15.6" />
+    <PackageReference Include="Grpc.Net.Client" Version="2.35.0" />
+    <PackageReference Include="Grpc.Net.ClientFactory" Version="2.32.0" />
+    <PackageReference Include="Grpc.Tools" Version="2.36.1" PrivateAssets="all" />
+  </ItemGroup>
   <ItemGroup>
-    <Protobuf Include="Protos\fiscalprint.proto" GrpcServices="Client" />
-  </ItemGroup>        
-
+    <Protobuf Include="Protos/fiscalprint.proto" GrpcServices="Client" Link="Protos/fiscalprint.proto" />
+  </ItemGroup>
 </Project>
