--- a/LocalPrinting-TFHKA/LocalPrinting-TFHKA.csproj
+++ b/LocalPrinting-TFHKA/LocalPrinting-TFHKA.csproj
@@ -2,12 +2,14 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <RuntimeIdentifiers>win7-x86;win10-x64;linux-x64</RuntimeIdentifiers>    
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Google.Protobuf" Version="3.15.6" />
     <PackageReference Include="Grpc.Net.Client" Version="2.35.0" />
     <PackageReference Include="Grpc.Net.ClientFactory" Version="2.32.0" />
     <PackageReference Include="Grpc.Tools" Version="2.36.1" PrivateAssets="all" />
+    <PackageReference Include="Microsoft.Windows.Compatibility" Version="5.0.2" />
   </ItemGroup>
   <ItemGroup>
     <Protobuf Include="Protos/fiscalprint.proto" GrpcServices="Client" Link="Protos/fiscalprint.proto" />
